# CLabs

./: CMakeLists.txt
lab1/task1/: task1.c
lab1/task10/: task10.c
lab1/task2/: task2.c
lab1/task3/: task3.c
lab1/task4/: task4.c
lab1/task5/: task5.c
lab1/task6/: task6.c
lab1/task7/: task7.c
lab1/task8/: task8.c
lab1/task9/: task9.c
lab2/task1/: functions.c  operations.h  task1.c
lab2/task10/: functions.c  operations.h  task10.c
lab2/task2/: functions.c  operations.h  task2.c
lab2/task3/: functions.c  operations.h  task3.c
lab2/task4/: functions.c  operations.h  task4.c
lab2/task7/: functions.c  operations.h
lab2/task8/: functions.c  operations.h  task8.c
lab2/task9/: functions.c  operations.h  task9.c
lab3/task1/: functions.c  operations.h  task1.c
lab3/task10/: functions.c  operations.h  task10.c
lab3/task3/: functions.c  operations.h  task3.c
lab3/task4/: functions.c  operations.h  task4.c  task41.c
lab3/task5/: functions.c  operations.h  task5.c
lab3/task9/: functions.c  operations.h  task9.c
lab4/task1/: functions.c  operations.h  task1.c
lab4/task7/: functions.c  operations.h  task7.c
lab5/task1/: task1.cpp
lab5/task2/: task2.cpp
lab5/task3/: task3.cpp
lab5/task4/: task4.cpp
lab5/task6/: task6.cpp
